--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,12 @@
 buildscript {
     ext {
         kotlin_version = '1.3.50'
+        version_timber = "4.7.1"
         version_navigation = '1.0.0'
         version_moshi = "1.8.0"
         version_retrofit = "2.5.0"
         version_retrofit_coroutines_adapter = "0.9.2"
+        version_Junit = "5.5.2"
     }
     repositories {
         google()
