--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,9 @@ android {
     dataBinding {
         enabled = true
     }
+    androidExtensions {
+        experimental = true
+    }
 }
 
 dependencies {
@@ -43,6 +46,13 @@ dependencies {
 
     implementation "com.jakewharton.timber:timber:$version_timber"
 
+
+    // Core with Ktx
+    implementation "androidx.core:core-ktx:$version_core"
+
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+
+
     // Navigation
     implementation "android.arch.navigation:navigation-fragment-ktx:$version_navigation"
     implementation "android.arch.navigation:navigation-ui-ktx:$version_navigation"
@@ -55,9 +65,13 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
 
+
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_kotlin_coroutines"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_kotlin_coroutines"
+
     // Retrofit Coroutines Support
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$version_retrofit_coroutines_adapter"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
 
     //junit5
     testImplementation "org.junit.jupiter:junit-jupiter-api:$version_Junit"
