--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,8 @@ dependencies {
 
     //junit5
     testImplementation "org.junit.jupiter:junit-jupiter-api:$version_Junit"
+
+    // Room database
+    implementation "androidx.room:room-runtime:$version_room"
+    kapt "androidx.room:room-compiler:$version_room"
 }
