--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         version_retrofit = "2.5.0"
         version_kotlin_coroutines = "1.1.0"
         version_retrofit_coroutines_adapter = "0.9.2"
+        version_room = "2.0.0"
         version_Junit = "5.5.2"
     }
     repositories {
