--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.3.50'
+        kotlin_version = '1.3.61'
         version_core = "1.0.1"
         version_timber = "4.7.1"
         version_navigation = '1.0.0'
@@ -10,9 +10,10 @@ buildscript {
         version_retrofit = "2.5.0"
         version_kotlin_coroutines = "1.1.0"
         version_retrofit_coroutines_adapter = "0.9.2"
-        version_room = "2.0.0"
+        version_room = "2.2.3"
         version_Junit = "5.5.2"
         version_OkHttp = "3.12.0"
+        version_core_testing = "2.1.0"
     }
     repositories {
         google()
